<resources>
    <string name="app_name">Inspection Sheet</string>
    <string name="selectTaskText">Please, select task</string>
    <string name="addDefectBtText">Start Inspection</string>
    <string name="syncBtText">Fetch objects data</string>
    <string name="defectCreate">Defect create</string>
    <string name="vl04BtText">Vl 0.4 kV</string>
    <string name="vl_6_10_kv_text">Vl 6-10 kV</string>
    <string name="vl_35_110_kv_text">Vl 35-110 kV</string>
    <string name="ps35_110_kv_text">Ps 35-220 kV</string>
    <string name="tp_6_10_04_kv_text">Tp 6-10/0.4 kV</string>
    <string name="search_near_text">Search in nearest</string>
    <string name="selectBySpBtText">Select by Sp</string>
    <string name="selectNameText">Or select by name</string>
    <string name="searchByNameBt">Search by name</string>
    <string name="selectSpText">Select SP</string>
    <string name="selectResText">Select RES</string>
    <string name="selectObjectText">Select object</string>
    <string name="next">Next</string>
    <string name="forward">Forward</string>
    <string name="prev">Previous</string>
    <string name="towerNameText">Tower №</string>
    <string name="inspectionTypeText">Type of equipmentInspection</string>
    <string name="towerMaterialText">Tower material</string>
    <string name="towerTypeText">Tower equipmentInspection</string>
    <string name="createDefectBtText">Add Defect</string>
    <string name="addPhotoDefectBtText">Add Photo for defect</string>
    <string name="faundedDefectsText">Founded defects</string>
    <string name="towerTiltText">Tower tilt</string>
    <string name="defectBracesText">Loose or damaged braces</string>
    <string name="defectNestsText">The presence of nests</string>
    <string name="defectFoundamentSqueezingText">squeezing of the Foundation</string>
    <string name="defectSettlingOfFoundationsText">Settling Of foundations</string>
    <string name="defectPresenceObjectsText">Presence of foreign objects</string>
    <string name="defectPresenceDispItemsText">the presence of dispatch items</string>
    <string name="defectCracksSupportsText">Cracks in the supports</string>
    <string name="endInspectionBt">End Inspection</string>
    <string name="tower_number">tower №</string>
    <string name="title_activity_bottom_navigation_test">BottomNavigationTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test2">Test2</string>
    <string name="save">Save</string>
    <string name="inspection">inspection</string>
    <string name="settings">settings</string>
    <string name="export_results">export</string>
    <string name="add_transformer_t1">Add transformerType 1</string>
    <string name="add_transformer_t2">Add transformerType 2</string>
    <string name="add_transformer_t3">Add transformerType 3</string>
    <string name="title_activity_tower_deffects">TowerDeffects</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_group_add_transfrmer_deffect">GroupAddTransfrmerDeffect</string>
    <string name="switch_inspections">Поменять местами осмотры</string>
    <string name="about">About</string>

    <!--для китайского плагина выбора фотографий -->
    <string name="selector_folder_all">Все фотографии</string>
    <string name="selector_caption">Назад</string>
    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_action_done">Выбрать(%1$d/%2$d)</string>
    <string name="selector_preview">Предпросмотр</string>
    <string name="selector_reach_max_image_hint">достигнуто максимальное количество выбраных %d!</string>
    <string name="tip_take_photo">фото</string>
    <string name="msg_no_camera">Камера не доступна!</string>
    <string name="camera_temp_file_error">Ошибка камеры</string>
    <string name="selector_permission_error">Отказано в доступе</string>
    <string name="selectVoltageText">Напряжение</string>
    <string name="finish">Закончить</string>
    <!--для китайского плагина выбора фотографий  end! -->


    <string name="preference_file_key">ru.drsk.progserega.inspectionsheet.settings_file</string>
    <string name="text_about"><![CDATA[

            Разработка АО "ДРСК" "Приморские электрические сети"
            <br>
            <br>
            <br>
            Разработчики:
            <br>
            <br>
            Назаров А.Г. Nazarov_AG@zes.prim.drsk.ru СП "Приморские западные электрические сети"
            <br>
            <br>
            Семёнов С.В. semenov@prim.drsk.ru "Аппарат управления"
            <br>
            <br>
            Кучеренко И.С. kucherenko@prim.drsk.ru "Аппарат управления"
            <br>
]]></string>
    <string name="show_on_map_text">go to map</string>
    <string name="journal">Journal</string>
    <string name="send_journal">Отправить</string>
    <string name="next_select_equipment">Осмотр оборудования</string>
    <string name="manufacture_year">год производства</string>
    <string name="inspected">осмотрено:</string>
    <string name="about_title_tex">Программный комплекс фиксации неполадок в электросетевом хозяйстве</string>
    <string name="about_version">версия</string>
    <string name="check_for_update"><u>check for update</u></string>
</resources>
