<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FoundedDefects">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lineAndTowerNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/foundedDefectsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/faundedDefectsText" />

        <CheckBox
            android:id="@+id/defectTowerTiltCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/towerTiltText"
            android:layout_weight="1"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/defectBracesCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectBracesText" />

        <CheckBox
            android:id="@+id/defectNestsCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectNestsText" />

        <CheckBox
            android:id="@+id/defectFoundamentSqueezingCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectFoundamentSqueezingText" />

        <CheckBox
            android:id="@+id/defectSettlingOfFoundationsCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectSettlingOfFoundationsText" />

        <CheckBox
            android:id="@+id/defectPresenceObjectsCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectPresenceObjectsText" />

        <CheckBox
            android:id="@+id/defectPresenceDispItemsCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectPresenceDispItemsText" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defectCracksSupportsText" />

        <Button
            android:id="@+id/nextBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>