<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.searchBySpRes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectSpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectSpText" />

        <Spinner
            android:id="@+id/selectSpSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/selectResText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectResText" />

        <Spinner
            android:id="@+id/selectResSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/selectObectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectObjectText" />

        <Spinner
            android:id="@+id/selectObjectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/doneSelectedObjectBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>