<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectTaskText" />

        <Button
            android:id="@+id/addDefectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addDefect"
            android:text="@string/addDefectBtText" />

        <Button
            android:id="@+id/syncButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="syncData"
            android:text="@string/syncBtText" />
        <ProgressBar
            android:layout_marginTop="50dp"
            android:id="@+id/loading_progress"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </ProgressBar>
        <TextView
            android:id="@+id/loading_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center">
        </TextView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>