<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inpect_line_tower_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InspectLineTower">
    
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/inspect_line_tower_bottomLA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_tower_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="№ опоры"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/inspect_line_tower_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:inputType="text"
                    android:text=""
                    app:layout_constraintEnd_toStartOf="@+id/inspect_line_select_tower_btn"
                    app:layout_constraintStart_toEndOf="@+id/text_tower_num"
                    app:layout_constraintTop_toTopOf="parent" />


                <Switch
                    android:id="@+id/inspect_line_tower_switch_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:text="GPS"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/inspect_line_select_tower_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/circlebackground"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/inspect_line_tower_switch_gps"
                    app:srcCompat="@drawable/ic_exchange"

                    />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/inspect_line_tower_textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="Материал"
                />

            <Spinner
                android:id="@+id/materials_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/inspect_line_tower_textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="Тип опоры"
                />

            <Spinner
                android:id="@+id/tower_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/inspection_line_tower_textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#e6dbba"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="Выявленные деффекты"
                android:textColor="@android:color/black" />


            <ru.drsk.progserega.inspectionsheet.ui.activities.NestedListView
                android:id="@+id/inspect_line_tower_deffects_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:animationCache="false"
                android:scrollingCache="false"
                android:smoothScrollbar="true" />

            <TextView
                android:id="@+id/inspection_line_tower_textcomment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:text="Прочие замечания, комментарий"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/inspect_line_tower_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:inputType="text|textMultiLine"
                android:text="" />
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Фотографии деффектов:"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/add_line_tower_deffect_photo_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:onClick="onAddTowerPhotoBtnClick"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/inspect_line_tower_deffect_photos"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/add_line_tower_deffect_photo_btn"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <!--Bottom tolbar -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/inspect_line_tower_bottomLA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


<!--        android:background="#F44336"-->
        <TextView
            android:id="@+id/inpsect_tower__finish_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/red_button_background"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/finish"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/inpsect_tower__previous_btn_text"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/green_button_background"
            android:gravity="center"
            android:text="@string/prev"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inpsect_tower__next_btn_text"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/green_button_background"
            android:gravity="center"
            android:text="@string/forward"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inpsect_tower__previous_btn_text"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>